Fixed annoying CSS bug with overflows and collapsing margins

--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -6,7 +6,7 @@
     .content {
         background-color: #D9EBDC;
         height: 100%;
-        overflow: auto;
+        padding: 5px 0;
 
         // This will be our normal page with information
         article {
